# Augur

./: .gitattributes  .gitignore  Augur-all-phases.md  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: agent.py  chat.py  config.py  conversation.py  main.py  observability.py  provider.py  sse.py  tools.py
backend/tests/: conftest.py  test_agent.py  test_chat.py  test_chat_endpoint.py  test_config.py  test_conversation.py  test_cors.py  test_health.py  test_observability.py  test_provider.py  test_sse.py  test_tools.py
docs/: issue-24-criterion-amendment.md  sse-contract.md
docs/agents/: doc-drift-check.md  domain.md
docs/research/: claude-tool-calling.md
docs/superpowers/plans/: 2026-07-20-truncation-stop-reason.md  2026-07-20-unknown-tool-name-guard.md  2026-07-21-cors-allowlist.md
docs/superpowers/specs/: 2026-07-20-truncation-stop-reason-design.md  2026-07-21-cors-allowlist-design.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  vitest.config.mts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: button-styles.ts  chat.test.tsx  chat.tsx  citations.tsx  code-block.tsx  composer.tsx  empty-state.tsx  markdown.tsx  primary-button.tsx  theme-toggle.tsx  tool-call-row.tsx  turn-error.tsx  turns.test.tsx  turns.tsx
frontend/src/lib/: browser-store.ts  chat-client.ts  chat-state.test.ts  chat-state.ts  sse-parser.test.ts  sse-parser.ts  sse.ts  use-chat.ts
