[project]
name = "augur-backend"
version = "0.1.0"
description = "Augur backend — streaming chat backbone & tool-calling spine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "anthropic>=0.112.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]
